--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 82a1d7d6-ced1-44eb-b142-4c28ea37837b
 name: d8kcma
 mail: adamw@puckettmarketing.com
-slogan: ''
+slogan: 'Yeah, you got this!'
 page:
   403: ''
   404: ''
